Prevent a crash when opening a new file with a modified document is canceled

When closing a document, the print preview is now disabled to avoid
accessing a view that no longer exist.

BUG:504939
FIXEd-IN:25.08.1